getting-started/invalid_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: validation-demo
  labels:
    webhook: enabled
    env: willberejected
spec:
  containers:
  - name: nginx
    image: nginx
